# slam-exercise

./: .clang-format  .gitignore  CMakeLists.txt  README.md  config.yaml
ch2/: CMakeLists.txt  README.md  libHelloSLAM.h
ch2/learning_cmake/: CMakeLists.txt  DisplayImage.cpp  mymath.cpp
ch3/: CMakeLists.txt  eigenMatrix.cpp  useGeometry.cpp
src/ch11/: CMakeLists.txt  feature_training.cpp  loop_closure.cpp
src/ch12/: CMakeLists.txt  dense_mono.cpp  pointcloud_mapping.cpp
src/ch13/: CMakeLists.txt
src/ch13/include/slam/: algorithm.h  backend.h  camera.h  common.h  feature.h  frame.h  frontend.h  g2o_types.h  map.h  mappoint.h  viewer.h
src/ch13/src/: CMakeLists.txt  feature.cpp  frame.cpp  frontend.cpp  map.cpp  mappoint.cpp  viewer.cpp
src/ch2/: CMakeLists.txt  helloSLAM.cpp  libHelloSLAM.cpp  useHello.cpp
src/ch2/learning_cmake/: CMakeLists.txt  DisplayImage.cpp  myMathApp.cpp
src/ch3/: CMakeLists.txt  README.md  coordinateTransform.cpp  eigenMatrix.cpp  plotTrajectry.cpp  useGeometry.cpp
src/ch4/: CMakeLists.txt  README.md  plot_trajectory_error.cpp  use_sophus.cpp
src/ch5/: CMakeLists.txt  image_basic.cpp  rgbd_point_cloud.cpp  stereo_vision.cpp  undistort_image.cpp
src/ch6/: CMakeLists.txt  basic_ceres.cpp  ceres_fitting.cpp  g2o_fitting.cpp  gauss_newton.cpp
src/ch7/: CMakeLists.txt  orb_cv.cpp  orb_pattern.yaml  orb_scatch.cpp  orb_scratch.cpp  pose_estimation_2d.cpp  pose_estimation_3d2d.cpp  pose_estimation_3d3d.cpp
src/ch7/include/: pose_estimation_2d.h
src/ch8/: CMakeLists.txt  optical_flow.cpp
src/ch9/: CMakeLists.txt  common.cpp  common.h  kalman.py  snavely_reprojection_error.cpp
