cmake_minimum_required(VERSION 3.0)
project(SLAM)
find_package(Sophus REQUIRED)
find_package(OpenCV CONFIG REQUIRED)
find_package(Eigen3 REQUIRED)
find_package(Pangolin REQUIRED)
find_package(fmt CONFIG REQUIRED)
find_package(matplot++ CONFIG REQUIRED)
set(CMAKE_CXX_FLAG "-std=c++17")

add_subdirectory(src/ch2)
add_subdirectory(src/ch3)
add_subdirectory(src/ch4)
add_subdirectory(src/ch5)
add_subdirectory(src/ch6)
add_subdirectory(src/ch7)
