cmake_minimum_required(VERSION 3.0)
set(CMAKE_TOOLCHAIN_FILE /workspace/vcpkg/scripts/buildsystems/vcpkg.cmake
  CACHE STRING "Vcpkg toolchain file")
project(ch3)
find_package(Eigen3 REQUIRED)
find_package(Pangolin REQUIRED)
add_executable(eigenMatrix eigenMatrix.cpp)
target_link_libraries(eigenMatrix Eigen3::Eigen) 
add_executable(Geometry useGeometry.cpp)
target_link_libraries(Geometry Eigen3::Eigen) 
add_executable(transform coordinateTransform.cpp)
target_link_libraries(transform Eigen3::Eigen pangolin) 
target_include_directories(transform PRIVATE ${Pangolin_INCLUDE_DIRS})
add_executable(plot plotTrajectry.cpp)
target_link_libraries(plot Eigen3::Eigen pangolin) 
target_include_directories(plot PRIVATE ${Pangolin_INCLUDE_DIRS})
